--- a/home.html
+++ b/home.html
@@ -30,11 +30,17 @@ permalink: /
                 {% if project.github %}
                 <a href="https://github.com/{{ project.github.repo }}"><img src="https://gh-card.dev/repos/{{ project.github.repo }}.svg"></a>
                 {% endif %}
-                {% if project.android %}
-                <a href="https://f-droid.org/repository/browse/?fdid={{ project.android.package }}" target="_blank">
-                <img src="https://fdroid.gitlab.io/artwork/badge/get-it-on.png" alt="Get it on F-Droid" height="90"/></a>
-                <a href="https://play.google.com/store/apps/details?id={{ project.android.package }}" target="_blank">
-                <img src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" alt="Get it on Google Play" height="90"/></a>
+                {% if project.izzyondroid %}
+                <a href="https://apt.izzysoft.de/fdroid/index/apk/{{ project.izzyondroid.package }}" target="_blank">
+                <img src="/assets/images/repos/izzyondroid.png" alt="Get it on IzzyOnDroid" height="90"/></a>
+                {% endif %}
+                {% if project.f-droid %}
+                <a href="https://f-droid.org/repository/browse/?fdid={{ project.f-droid.package }}" target="_blank">
+                <img src="/assets/images/repos/f-droid.png" alt="Get it on F-Droid" height="90"/></a>
+                {% endif %}
+                {% if project.google_play %}
+                <a href="https://play.google.com/store/apps/details?id={{ project.google_play.package }}" target="_blank">
+                <img src="/assets/images/repos/google_play.png" alt="Get it on Google Play" height="90"/></a>
                 {% endif %}
                 <p>{{ project.description }}</p>
             </div>
